feat: get all therapists user / data
