# docs/swagger.yaml
@@ -191,6 +191,21 @@ definitions:
       username:
         type: string
     type: object
+  rest.GetTherapistOutput:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      is_active:
+        type: boolean
+      roles:
+        $ref: '#/definitions/model.Roles'
+      updated_at:
+        type: string
+      username:
+        type: string
+    type: object
   rest.InitResetPasswordInput:
     properties:
       email:
@@ -1426,6 +1441,48 @@ paths:
       security:
       - ParentLevelAuth: []
       summary: Get my profile data
+      tags:
+      - Users
+  /v1/users/therapists:
+    get:
+      consumes:
+      - application/json
+      description: Return the list of all users with therapist role
+      parameters:
+      - description: JWT Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.StandardSuccessResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/rest.GetTherapistOutput'
+                  type: array
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/rest.StandardErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/rest.StandardErrorResponse'
+        "500":
+          description: Internal Error
+          schema:
+            $ref: '#/definitions/rest.StandardErrorResponse'
+      security:
+      - ParentLevelAuth: []
+      summary: Get all therapists
       tags:
       - Users
 securityDefinitions:
