# internal/delivery/rest/rest.go
@@ -88,6 +88,8 @@ func (s *Service) initV1Routes() {
 
 	s.v1.GET("/me", s.HandleGetMyProfile(), s.AuthMiddleware(false))
 
+	s.v1.GET("/users/therapists", s.HandleGetTherapists(), s.AuthMiddleware(false))
+
 	s.v1.GET("/swagger/*", echoSwagger.WrapHandler)
 }
 
